- Version 0.5.1:
* Add zoom in/out buttons (useful for laptop with mouse wheel) [contributed by Ian (cacafuego2)]
* Fixed circle image display bug. This fixes the warning like (Chain level):
  "Warning: invalid image reference: "('IMAGE_SCENE_CHAIN_HEAD',)"
  [contributed by Ian (cacafuego2)]

- Version 0.5.0:

* Level view selection is now a tool.
* Selection tool in level view can cycle through item under mouse if Alt key is pressed
* Added pan tool, also available in selection tool by middle clicking or holding left & right buttons
* Added move/rotate tool for most elements, and resize tool for circle.
* Geometry tag and levelExit filter now provides auto-completion
* All angles are now displayed in degrees
* 'scalex', 'scaley' attributes are now displayed as a single 'scale' attribute
* 'x', 'y' attributes are now displayed as a single 'pos' or 'center' attribute
* 'width', 'height' attributes are now displayed as a single 'size' attribute

- Version 0.4.0:

* Add child now only propose child that are valid to add to the selected item.
* Added unique identifier generation when adding child
* Added support for cut/copy/paste of node and composite. The element XML is stored in the clipboard and can be used to mess around. Pasting automatically generate unique id.
* Keyboard shortcut for cut/copy/paste/delete works in all views.
* Completion is provided for ball type
* Completion list is now sorted in non case-sensitive order
* Can unset a mandatory attribute by inputing an empty string
* Added id/name column in tree view
* Added 'group' icon for each element in tree view
* Added issue detection system:
  - invalid attribute value (reference to non existing id)
  - missing children (for example a camera must have at least one 'poi')
  In the tree view, issues are shown in the tree view as a red symbol overlay on top of the group icon.
  In the property list, property name turn red when there is an issue